fix(*): Adjust alignments

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ section {
     padding: 40px 0;
 }
 
+section:first-of-type {
+    padding-top: calc(40px + var(--header-height));
+}
+
 .weichwarenprojekt-logo {
     height: 48px;
     padding-right: 40px;
@@ -57,12 +61,11 @@ section {
  * First glance
  *
  */
-#first-glance .abstract-container {
+#first-glance {
     display: flex;
-    align-items: flex-end;
     justify-content: center;
-    height: 50vh;
-    margin-bottom: 40px;
+    align-items: center;
+    height: 70vh;
 }
 
 #first-glance .abstract-intro {
@@ -155,6 +158,7 @@ img.showcase-preview {
 #stay-tuned {
     margin-top: 40px;
     margin-bottom: 40px;
+    font-size: 1.3rem;
 }
 
 #stay-tuned .container {
@@ -162,7 +166,7 @@ img.showcase-preview {
 }
 
 #stay-tuned img {
-    width: 70%;
+    width: 100%;
     height: auto;
 }
 
